# micro_ros2_foxy

Arduino/: micro_ros2_foxy.ino
src/serial_com/: CMakeLists.txt  package.xml
src/serial_com/src/: serial_arduino.cpp
